# random-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bdd.yml  dependabot-auto-merge.yml  image-scan.yml  publish-dockerhub.yml  publish.yml  scan-scheduled.yml  test.yml
src/random_mcp_server/: __init__.py  generators.py  server.py
tests/: conftest.py  test_bdd.py  test_feature_flags.py  test_generators.py  test_server.py
tests/features/: coords.feature  count_records.feature  empty.feature  get_record.feature  people.feature  regenerate.feature  server_info.feature  values.feature  words.feature
