[project]
name = "random-mcp-server"
version = "0.2.2"
description = "An MCP server that returns random JSON things (people, words, values, coords, empty)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Mitch Allen", email = "npm@mitchallen.com" },
]
keywords = ["mcp", "fastmcp", "random", "faker"]
dependencies = [
    "fastmcp>=2.9.0",
    "faker>=30.0.0",
]

[project.urls]
Homepage = "https://github.com/mitchallen/random-mcp-server"
Repository = "https://github.com/mitchallen/random-mcp-server"

[project.scripts]
random-mcp-server = "random_mcp_server.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-bdd>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/random_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
